# CyberHex

./: .env.example  .gitignore  .husky.config.json  CHANGELOG.md  DEMO_GUIDE.md  LICENSE  NOTICE  QUICK_START.md  README.md  RELEASE_NOTES_v1.0.md  VERSIONING.md  add_layers.py  docker-compose.yml  fix_matrix_bare.py  index.js  openapi.yaml  package.json  parse_and_check.py  refactor_matrix.py  template_matrix.py  update_model.py  v1_release_checklist.md
.github/workflows/: ci.yml  cpp-build.yml  react-lint.yml
ML/models/cpp-modules/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  app  cmake_install.cmake  delete_obsolete.py  libcyberhex.so.1  libcyberhex.so.1.0  main.cpp  tests.cpp  unit_tests
ML/models/cpp-modules/build-cuda/: CMakeCache.txt  CTestTestfile.cmake  Makefile  app  cmake_install.cmake  cyberhex_bench  cyberhex_export  cyberhex_infer  cyberhex_ml  unit_tests
ML/models/cpp-modules/cuda/: matmul.cu  runtime.h
ML/models/cpp-modules/include/: activation_functions.h  activations.h  basic_maths.h  conv2d.h  cyberhex_c_api.h  data_structures.h  dense.h  device.h  distributed.h  fused_ops.h  graph.h  higher_maths.h  io.h  layer.h  machine_learning_algorithms.h  matrix.h  metrics.h  model.h  onnx_export.h  ops_dispatch.h  precision.h  stat.h  tensor.h  training_protocol.h  transformer.h  types.h  unit_test.h  weight_io.h  ws_server.h
ML/models/cpp-modules/models/best_model/: epoch_losses.csv  layer_0_bias.txt  layer_0_weights.txt  layer_1_weights.txt  layer_2_bias.txt  layer_2_weights.txt  layer_3_bias.txt  layer_3_weights.txt
ML/models/cpp-modules/outputs/model_1429895/: layer_0.json  layer_2.json
ML/models/cpp-modules/outputs/model_1497961/: export_manifest.json  layer_0.json  layer_2.json  layer_4.json
ML/models/cpp-modules/src/: activation_functions.cpp  activations.cpp  basic_maths.cpp  bench_main.cpp  conv2d.cpp  cuda_matmul_stub.cpp  cyberhex_c_api.cpp  cyberhex_export.cpp  cyberhex_infer.cpp  cyberhex_ml.cpp  data_structures.cpp  dense.cpp  device.cpp  distributed.cpp  fused_ops.cpp  graph.cpp  higher_maths.cpp  io.cpp  loss.cpp  machine_learning_algorithms.cpp  main.cpp  matrix.cpp  model.cpp  nueral_network.cpp  onnx_export.cpp  ops_dispatch.cpp  optimizer.cpp  precision.cpp  stat.cpp  tests.cpp  training_protocol.cpp  transformer.cpp  types.cpp  weight_io.cpp  ws_server.cpp
ML/models/outputs/: model_307050.npz
ML/models/python-modules/: infer.py  main.py  train.py
ML/models/python-modules/commons/: mean.py
ML/scripts/: benchmark.py  export_onnx.py  infer_onnx.py
ML/ui/visualizations/: index.html  package-lock.json  package.json  readme.md
ML/ui/visualizations/public/: epoch_losses.csv  layer_0.json  layer_0_bias.txt  layer_0_weights.txt  layer_1.json  (+13 more)
backend/: .dockerignore  .env.example  .eslintrc.js  .prettierignore  .prettierrc  Dockerfile  app.js  index.js  package-lock.json  package.json
backend/controllers/: experimentControllers.js  otpController.js  userControllers.js
backend/middleware/: authMiddleware.js  errorHandler.js  rateLimiter.js  rbac.js  security.js  validation.js
backend/models/: AuditLog.js  Experiment.js  Model.js  Otp.js  RevokedToken.js  TrainingLog.js  User.js
backend/routes/: authRoutes.js  engineRoutes.js  experimentRoutes.js  healthRoutes.js  mlTrainingRoutes.js  otpRoutes.js  userRoutes.js
backend/services/: auditService.js  cacheService.js  emailService.js  exportService.js  inferenceService.js  jobStore.js  mlService.js  studioSocket.js  tokenService.js  trainingRunner.js
backend/tests/: auth.test.js  env.js  inference.test.js  mlTraining.test.js  setup.js
backend/tests/fixtures/: fake_trainer.mjs
backend/tests/helpers/: testAuth.js
backend/utils/: db_init.js  env.js  logger.js  validators.js
client/: .env.example  .prettierignore  Dockerfile  build_errors.txt  errors_summary.txt  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  Layer.tsx  index.css  router.tsx
client/src/components/: ErrorBoundary.tsx  ProtectedRoute.tsx  TrainingChart.tsx  auth-modals.tsx  authbuttons.tsx  authpopup.tsx  mainpopup.tsx  navbar.tsx  navitem.tsx  progressbar.tsx  sidebar.tsx  signin.tsx  signup.tsx
client/src/const/: data.ts
client/src/contexts/: auth.tsx  popups.tsx  store.tsx
client/src/hooks/: useKeyboardShortcuts.ts  useWebSocket.ts
client/src/lib/: api.ts  design-tokens.ts  design-v4.ts
client/src/pages/: AboutPage.tsx  ContactPage.tsx  CyberGames.tsx  DashboardPage.tsx  ExperimentBuilderPage.tsx  ExperimentDetailPage.tsx  ExperimentsListPage.tsx  LandingPage.tsx  ModelsPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  SignInPage.tsx  SignUpPage.tsx  TestPage.tsx
client/src/states/: uiStore.ts
client/src/stores/: authModal.ts  commandPalette.ts  experiments.ts  theme.ts  toast.ts
client/src/tests/: CyberGames.test.tsx
controllers/: userControllers.js
docs/architecture/: v5-phase1-platform.md  v5-phase2-runtime.md  v5-phase3-autodiff.md  v5-phase4-scale.md  v5-phase5-interop.md  v5-phase6-production.md  v5-training-protocol.md
docs/design/: v4.0-no-01-the-word.md
models/: User.js
public-web/: index.html  package-lock.json  package.json
public-web/src/: App.tsx  components.tsx  index.css
scripts/: build.sh
studio/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
studio/.github/workflows/: ci.yml
studio/electron/: main.cjs  preload.cjs
studio/src/: App.tsx  main.tsx
studio/src/hooks/: useEngineConnection.ts  useMediaDevices.ts  useNeuralPipeline.ts  useStudioBootstrap.ts
studio/src/media/: LayoutTemplates.ts
studio/src/services/: EngineBridge.ts  WebSocketService.ts
studio/src/stores/: studioStore.test.ts  studioStore.ts
studio/src/styles/: globals.css
studio/src/types/: index.ts
studio/src/utils/: eventBus.ts
studio/src/workers/: frameProcessor.worker.ts  inference.worker.ts
utils/: db_init.js
(+83 files in other folders)
